# pyCFD

./: .refer.py.swp  1.txt  refer.py  refer2.py
1DFVM/: .parctice.py.swp  .ref.py.swp  parctice.py  practice.py  ref.py
2DFVM/: ref.py
Numerical_analysis/: cal_circle.py
PINNs/: main.py
PhdProject/1DFVM/: main.py
PhdProject/course/c0/: main.py
basicCourse/c2/: heat_equ_liter_photo.py  main.py
basicCourse/c3/: main.py
course/: readme.md
course/appendix/: main.py
course/c2/: animation.py  heat_equ_liter_animation.py  main.py
course/c3/: main.py
course/c4/: main.ipynb  main.py  timecal.py
course/c4/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
course/c5/: .main.py.swp  main.py  test.py  test2.py
course/c6/: main.py  t.py  test.py  timecal.py
course/numpy_cal/: .main.py.swp  main.py  test.py
course/workspace/: .numpy_test.py.swp  numpy_test.py
course/workspace/appendix/src/cal/: coord_field.py
course/workspace/appendix/tools/: animation.py
matplotlib/: function_cardi.py
pybind_ex1/: CMakeLists.txt
pybind_ex1/practice_space/: main.py
pybind_ex1/practice_space/ex1/: CMakeLists.txt  add.cpp
pybind_ex1/src/: 2Dgrid.cpp  2Dgrid_pybind.cpp  a.out  pybind_reference.cpp
pybind_ex1/utility/: test_gui.py  visualization.py  visuall_gui.py
test_practice/: prediction.vtk  refer3.py  test.py
test_practice/my_project/: golden_model.py  ground.vtk  main.py  test.vtk
test_practice/my_project/OF_data/MyMRH/: Allrun.pre  MyRun
test_practice/my_project/OF_data/MyMRH/0/bottomAir/: G  IDefault  T  U  cellToRegion  epsilon  k  p  p_rgh  qr
test_practice/my_project/OF_data/MyMRH/0/heater/: G  IDefault  T  U  k  p  (+4 more)
(+55 files in other folders)
